--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -50,6 +50,7 @@ ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 xttlove,https://raw.githubusercontent.com/Yzaams/clash/main/xttlove.list
 ruleset=📺 goodme,https://raw.githubusercontent.com/Yzaams/clash/main/goodme.list
+ruleset=📺 ACA,https://raw.githubusercontent.com/Yzaams/clash/main/ACA.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
@@ -95,6 +96,7 @@ custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
 custom_proxy_group=📺 goodme`select`[]🌏 古茗线路
+custom_proxy_group=📺 ACA`select`[]🌏 ACA线路
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
@@ -135,7 +137,9 @@ custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP
 
 custom_proxy_group=🌏 守候线路`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(港|HK))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(美|US))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
