--- a/XTT@GM@ACA.ini
+++ b/XTT@GM@ACA.ini
@@ -109,31 +109,31 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(香港|HK))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(香港|HK))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(香港|HK))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(HK))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(香港|HK))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(台湾|TW))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(台湾|TW))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(台湾|TW))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(TW))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(台湾|TW))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(狮城|SG))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(狮城|SG))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(狮城|SG))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(SG))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(狮城|SG))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(日本|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(日本|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(日本|JP))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(JP))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(日本|JP))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(美国|US))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(美国|US))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(美国|US))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(US))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(美国|US))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(韩|KR))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(韩|KR))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(韩|KR))((?=.*(🧃|🍾|🍸|🧉|🍹))|(?!.*[X|x|×|Emby|🥤])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(KR))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(韩|KR))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(香港|HK|台湾|TW|狮城|SG|日本|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(香港|HK|台湾|TW|狮城|SG|日本|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK||TW||SG||JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
