--- a/XTT@GM@ACA.ini
+++ b/XTT@GM@ACA.ini
@@ -135,7 +135,7 @@ custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(韩|KR))((?=.*(IEPL|IPL
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK||TW||SG||JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(香港))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
