--- a/XTT@GM@ACA.ini
+++ b/XTT@GM@ACA.ini
@@ -51,7 +51,7 @@ ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=📺 xttlove,https://raw.githubusercontent.com/Yzaams/clash/main/xttlove.list
 ruleset=📺 goodme,https://raw.githubusercontent.com/Yzaams/clash/main/goodme.list
 ruleset=📺 ACA,https://raw.githubusercontent.com/Yzaams/clash/main/ACA.list
-ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
+ruleset=📺 emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -97,7 +97,7 @@ custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
 custom_proxy_group=📺 goodme`select`[]🌏 古茗线路
 custom_proxy_group=📺 ACA`select`[]🌏 ACA线路
-custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
@@ -109,37 +109,37 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(HK))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(HK))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(香港|HK))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(TW))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(TW))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(台湾|TW))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(SG))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(SG))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(狮城|SG))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(JP))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(JP))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(日本|JP))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(US))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(US))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(美国|US))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(KR))(?!.*[X|x|×|Emby]).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(KR))(?!.*[X|x|×|emby]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(韩|KR))((?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链))|(?=.*(🥤))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(香港))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(HK))(?=.*(emby+tg)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(US))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(US))(?=.*(emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
