--- a/XTT@GM@ACA.ini
+++ b/XTT@GM@ACA.ini
@@ -137,7 +137,7 @@ custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])
 
 custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])(?!.*emby)|(?=.*(0\.0[1-9]))(?!.*emby).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(香港|台湾|狮城|日本|HK|TW|SG|JP))(?=.*(emby+tg|🍾|🍸|🧉|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(香港|台湾|狮城|日本|HK|TW|SG|JP))(?=.*(🍾|🍸|🧉|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(US))(?=.*(emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
