--- a/XTT@GM@ACA.ini
+++ b/XTT@GM@ACA.ini
@@ -139,7 +139,7 @@ custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))(?=.*0\.[1-9])
 
 custom_proxy_group=🌏 古茗线路`url-test`^(?=.*(香港|台湾|狮城|日本|HK|TW|SG|JP))(?=.*(🍾|🍸|🧉|🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(US))(?=.*(emby)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 ACA线路`url-test`^(?=.*(US))(?=.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
