--- a/XTT@LinkCube.ini
+++ b/XTT@LinkCube.ini
@@ -105,27 +105,27 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(香港))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(香港))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(HK))(?!.*[X|x|×])|(?=.*(香港))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(香港|HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(台湾))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(台湾))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(TW))(?!.*[X|x|×])|(?=.*(台湾))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(台湾|TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(狮城))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(狮城))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(SG))(?!.*[X|x|×])|(?=.*(狮城))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(狮城|SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(日本))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(日本))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(JP))(?!.*[X|x|×])|(?=.*(日本))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(日本|JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(美国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(美国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(US))(?!.*[X|x|×])|(?=.*(美国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(美国|US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])|(?=.*(0\.0[1-9]))|(?=.*(韩国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))|(?=.*(韩国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(KR))(?!.*[X|x|×])|(?=.*(韩国))(?=.*(专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(韩|KR))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
