--- a/XTT@ATOM(all).ini
+++ b/XTT@ATOM(all).ini
@@ -106,73 +106,73 @@ custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
 # HK
-custom_proxy_group=🇭🇰 香港低倍`select`[]🇭🇰 守候低倍`[]🇭🇰 ATOM
+custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
 custom_proxy_group=🇭🇰 守候低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 香港1倍`select`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
+custom_proxy_group=🇭🇰 香港1倍`fallback`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
 custom_proxy_group=🇭🇰 守候1倍`url-test`^(?=.*(HK))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 香港高级`select`[]🇭🇰 守候高级`[]🇭🇰 ATOM
+custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 ATOM`[]🇭🇰 守候高级
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇭🇰 ATOM`url-test`^(?=.*(Hong Kong)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
-custom_proxy_group=🇹🇼 台湾低倍`select`[]🇹🇼 守候低倍`[]🇹🇼 ATOM
+custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
 custom_proxy_group=🇹🇼 守候低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾1倍`select`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
+custom_proxy_group=🇹🇼 台湾1倍`fallback`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
 custom_proxy_group=🇹🇼 守候1倍`url-test`^(?=.*(TW))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾高级`select`[]🇹🇼 守候高级`[]🇹🇼 ATOM
+custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 ATOM`[]🇹🇼 守候高级
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇹🇼 ATOM`url-test`^(?=.*(Taiwan)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG
-custom_proxy_group=🇸🇬 狮城低倍`select`[]🇸🇬 守候低倍`[]🇸🇬 ATOM
+custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
 custom_proxy_group=🇸🇬 守候低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城1倍`select`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
+custom_proxy_group=🇸🇬 狮城1倍`fallback`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
 custom_proxy_group=🇸🇬 守候1倍`url-test`^(?=.*(SG))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城高级`select`[]🇸🇬 守候高级`[]🇸🇬 ATOM
+custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 ATOM`[]🇸🇬 守候高级
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇸🇬 ATOM`url-test`^(?=.*(Singapore)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
-custom_proxy_group=🇯🇵 日本低倍`select`[]🇯🇵 守候低倍`[]🇯🇵 ATOM
+custom_proxy_group=🇯🇵 日本低倍`fallback`[]🇯🇵 守候低倍`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
 custom_proxy_group=🇯🇵 守候低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本1倍`select`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
+custom_proxy_group=🇯🇵 日本1倍`fallback`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
 custom_proxy_group=🇯🇵 守候1倍`url-test`^(?=.*(JP))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本高级`select`[]🇯🇵 守候高级`[]🇯🇵 ATOM
+custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 ATOM`[]🇯🇵 守候高级
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇯🇵 ATOM`url-test`^(?=.*(Japan)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
-custom_proxy_group=🇺🇲 美国低倍`select`[]🇺🇲 守候低倍`[]🇺🇲 ATOM
+custom_proxy_group=🇺🇲 美国低倍`fallback`[]🇺🇲 守候低倍`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
 custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国1倍`select`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
+custom_proxy_group=🇺🇲 美国1倍`fallback`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
 custom_proxy_group=🇺🇲 守候1倍`url-test`^(?=.*(US))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国高级`select`[]🇺🇲 守候高级`[]🇺🇲 ATOM
+custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 ATOM`[]🇺🇲 守候高级
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇺🇲 ATOM`url-test`^(?=.*(United States)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # KR
-custom_proxy_group=🇰🇷 韩国低倍`select`[]🇰🇷 守候低倍`[]🇰🇷 ATOM
+custom_proxy_group=🇰🇷 韩国低倍`fallback`[]🇰🇷 守候低倍`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
 custom_proxy_group=🇰🇷 守候低倍`url-test`^(?=.*(KR))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国1倍`select`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
+custom_proxy_group=🇰🇷 韩国1倍`fallback`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
 custom_proxy_group=🇰🇷 守候1倍`url-test`^(?=.*(KR))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国高级`select`[]🇰🇷 守候高级`[]🇰🇷 ATOM
+custom_proxy_group=🇰🇷 韩国高级`fallback`[]🇰🇷 ATOM`[]🇰🇷 守候高级
 custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇰🇷 ATOM`url-test`^(?=.*(Korea)).*$`http://www.gstatic.com/generate_204`300,,50
