--- a/XTT@ATOM(all).ini
+++ b/XTT@ATOM(all).ini
@@ -142,22 +142,22 @@ custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP
 custom_proxy_group=🇰🇷 ATOM`url-test`^(?=.*(Korea)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
-custom_proxy_group=🇭🇰 香港1倍`fallback`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
+custom_proxy_group=🇭🇰 香港1倍`fallback`[]🇭🇰 ATOM`[]🇭🇰 守候1倍
 custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 ATOM`[]🇭🇰 守候高级
 custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
-custom_proxy_group=🇹🇼 台湾1倍`fallback`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
+custom_proxy_group=🇹🇼 台湾1倍`fallback`[]🇹🇼 ATOM`[]🇹🇼 守候1倍
 custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 ATOM`[]🇹🇼 守候高级
 custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
-custom_proxy_group=🇸🇬 狮城1倍`fallback`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
+custom_proxy_group=🇸🇬 狮城1倍`fallback`[]🇸🇬 ATOM`[]🇸🇬 守候1倍
 custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 ATOM`[]🇸🇬 守候高级
 custom_proxy_group=🇯🇵 日本低倍`fallback`[]🇯🇵 守候低倍`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
-custom_proxy_group=🇯🇵 日本1倍`fallback`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
+custom_proxy_group=🇯🇵 日本1倍`fallback`[]🇯🇵 ATOM`[]🇯🇵 守候1倍
 custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 ATOM`[]🇯🇵 守候高级
 custom_proxy_group=🇺🇲 美国低倍`fallback`[]🇺🇲 守候低倍`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
-custom_proxy_group=🇺🇲 美国1倍`fallback`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
+custom_proxy_group=🇺🇲 美国1倍`fallback`[]🇺🇲 ATOM`[]🇺🇲 守候1倍
 custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 ATOM`[]🇺🇲 守候高级
 custom_proxy_group=🇰🇷 韩国低倍`fallback`[]🇰🇷 守候低倍`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
-custom_proxy_group=🇰🇷 韩国1倍`fallback`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
+custom_proxy_group=🇰🇷 韩国1倍`fallback`[]🇰🇷 ATOM`[]🇰🇷 守候1倍
 custom_proxy_group=🇰🇷 韩国高级`fallback`[]🇰🇷 ATOM`[]🇰🇷 守候高级
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
