--- a/XTT@ATOM(all).ini
+++ b/XTT@ATOM(all).ini
@@ -71,33 +71,33 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
-custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
 custom_proxy_group=📺 emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🇭🇰 CTC GAME`[]🇹🇼 CTC GAME`[]🇯🇵 CTC GAME
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
@@ -107,58 +107,43 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切
 
 # HK
 custom_proxy_group=🇭🇰 守候低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 守候1倍`url-test`^(?=.*(HK))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 ATOM`url-test`^(?=.*(Hong Kong)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(AHC|DMIT|Misaka|ALI))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
 custom_proxy_group=🇹🇼 守候低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 守候1倍`url-test`^(?=.*(TW))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 ATOM`url-test`^(?=.*(Taiwan)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT|UC))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG
 custom_proxy_group=🇸🇬 守候低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 守候1倍`url-test`^(?=.*(SG))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 ATOM`url-test`^(?=.*(Singapore)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
 custom_proxy_group=🇯🇵 守候低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 守候1倍`url-test`^(?=.*(JP))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 ATOM`url-test`^(?=.*(Japan)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(SG))(?=.*(OWO))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
 custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 守候1倍`url-test`^(?=.*(US))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 ATOM`url-test`^(?=.*(United States)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
 
-# KR
-custom_proxy_group=🇰🇷 守候低倍`url-test`^(?=.*(KR))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 守候1倍`url-test`^(?=.*(KR))(?!.*[X|x|×]).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 守候高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 ATOM`url-test`^(?=.*(Korea)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*(GAME|专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 CTC GAME`url-test`^(?=.*(TW))(?=.*(UC)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 CTC GAME`url-test`^(?=.*(JP))(?=.*(CIPLC|UCLOUD)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 香港低倍`fallback`[]🇭🇰 守候低倍`[]🇭🇰 守候1倍`[]🇭🇰 ATOM
-custom_proxy_group=🇭🇰 香港1倍`fallback`[]🇭🇰 ATOM`[]🇭🇰 守候1倍
-custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 ATOM`[]🇭🇰 守候高级
-custom_proxy_group=🇹🇼 台湾低倍`fallback`[]🇹🇼 守候低倍`[]🇹🇼 守候1倍`[]🇹🇼 ATOM
-custom_proxy_group=🇹🇼 台湾1倍`fallback`[]🇹🇼 ATOM`[]🇹🇼 守候1倍
-custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 ATOM`[]🇹🇼 守候高级
-custom_proxy_group=🇸🇬 狮城低倍`fallback`[]🇸🇬 守候低倍`[]🇸🇬 守候1倍`[]🇸🇬 ATOM
-custom_proxy_group=🇸🇬 狮城1倍`fallback`[]🇸🇬 ATOM`[]🇸🇬 守候1倍
-custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 ATOM`[]🇸🇬 守候高级
-custom_proxy_group=🇯🇵 日本低倍`fallback`[]🇯🇵 守候低倍`[]🇯🇵 守候1倍`[]🇯🇵 ATOM
-custom_proxy_group=🇯🇵 日本1倍`fallback`[]🇯🇵 ATOM`[]🇯🇵 守候1倍
-custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 ATOM`[]🇯🇵 守候高级
-custom_proxy_group=🇺🇲 美国低倍`fallback`[]🇺🇲 守候低倍`[]🇺🇲 守候1倍`[]🇺🇲 ATOM
-custom_proxy_group=🇺🇲 美国1倍`fallback`[]🇺🇲 ATOM`[]🇺🇲 守候1倍
-custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 ATOM`[]🇺🇲 守候高级
-custom_proxy_group=🇰🇷 韩国低倍`fallback`[]🇰🇷 守候低倍`[]🇰🇷 守候1倍`[]🇰🇷 ATOM
-custom_proxy_group=🇰🇷 韩国1倍`fallback`[]🇰🇷 ATOM`[]🇰🇷 守候1倍
-custom_proxy_group=🇰🇷 韩国高级`fallback`[]🇰🇷 ATOM`[]🇰🇷 守候高级
+custom_proxy_group=🇭🇰 香港低倍`select`[]🇭🇰 守候低倍
+custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 CTC`[]🇭🇰 守候高级
+custom_proxy_group=🇹🇼 台湾低倍`select`[]🇹🇼 守候低倍
+custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 CTC`[]🇹🇼 守候高级
+custom_proxy_group=🇸🇬 狮城低倍`select`[]🇸🇬 守候低倍
+custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 CTC`[]🇸🇬 守候高级
+custom_proxy_group=🇯🇵 日本低倍`select`[]🇯🇵 守候低倍
+custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 CTC`[]🇯🇵 守候高级
+custom_proxy_group=🇺🇲 美国低倍`select`[]🇺🇲 守候低倍
+custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 CTC`[]🇺🇲 守候高级
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 
