--- a/XTT@CTC(full).ini
+++ b/XTT@CTC(full).ini
@@ -123,7 +123,7 @@ custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))((?!.*0\.[1-9]
 # JP
 custom_proxy_group=🇯🇵 守候低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(SG))(?=.*(OWO))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
 custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
