--- a/XTT@CTC(full).ini
+++ b/XTT@CTC(full).ini
@@ -106,27 +106,27 @@ custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🌏 低倍节点
 
 # HK
-custom_proxy_group=🇭🇰 守候低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(AHC|DMIT|Misaka|ALI))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
-custom_proxy_group=🇹🇼 守候低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT|UC))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG
-custom_proxy_group=🇸🇬 守候低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
-custom_proxy_group=🇯🇵 守候低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
-custom_proxy_group=🇺🇲 守候低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
 
@@ -134,20 +134,15 @@ custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*(GAME|专线)).*$`
 custom_proxy_group=🇹🇼 CTC GAME`url-test`^(?=.*(TW))(?=.*(UC)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC GAME`url-test`^(?=.*(JP))(?=.*(CIPLC|UCLOUD)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 香港低倍`select`[]🇭🇰 守候低倍
 custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 CTC`[]🇭🇰 守候高级`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾低倍`select`[]🇹🇼 守候低倍
 custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 CTC`[]🇹🇼 守候高级`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`select`[]🇸🇬 守候低倍
 custom_proxy_group=🇸🇬 狮城高级`fallback`[]🇸🇬 CTC`[]🇸🇬 守候高级`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`select`[]🇯🇵 守候低倍
 custom_proxy_group=🇯🇵 日本高级`fallback`[]🇯🇵 CTC`[]🇯🇵 守候高级`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`select`[]🇺🇲 守候低倍
 custom_proxy_group=🇺🇲 美国高级`fallback`[]🇺🇲 CTC`[]🇺🇲 守候高级`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9]))).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(CM|CU).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
