--- a/XTT@CTC(full).ini
+++ b/XTT@CTC(full).ini
@@ -138,7 +138,7 @@ custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))((?!.*0\.[1-9])).
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*(GAME)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*((GAME|DMIT)(3X)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 CTC GAME`url-test`^(?=.*(TW))(?=.*(UC)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC GAME`url-test`^(?=.*(JP))(?=.*(CIPLC|UCLOUD)).*$`http://www.gstatic.com/generate_204`300,,50
 
