--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -105,11 +105,11 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🌏 低倍节点
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))((?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))((?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))((?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))((?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))((?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(HK))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(TW))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(SG))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(JP))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(US))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(KR))(?=.*0\.[1-9])(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`fallback`[]🇭🇰 CTC`[]🇭🇰 守候高级`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`fallback`[]🇹🇼 CTC`[]🇹🇼 守候高级`http://www.gstatic.com/generate_204`300,,50
@@ -142,9 +142,9 @@ custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*((GAME|DMIT)(3X)).
 custom_proxy_group=🇹🇼 CTC GAME`url-test`^(?=.*(TW))(?=.*(UC)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC GAME`url-test`^(?=.*(JP))(?=.*(CIPLC|UCLOUD)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9]))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9])|(?=.*(0\.0[1-9])))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候线路`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9]))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
