--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -59,7 +59,6 @@ ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🎮 Game,https://raw.githubusercontent.com/Yzaams/clash/main/Game.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -77,17 +76,17 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
-custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`
-custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国高级`
+custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
