--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -96,7 +96,7 @@ custom_proxy_group=📺 emby`select`[]DIRECT`[]🌏 低倍节点
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点
 custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 CTC GAME`[]🇹🇼 CTC GAME`[]🇯🇵 CTC GAME
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
@@ -136,10 +136,6 @@ custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))((?!.*0\.[1-9])).
 # US
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 CTC`url-test`^(?=.*(US))(?=.*(ATT)).*$`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=🇭🇰 CTC GAME`url-test`^(?=.*(HK))(?=.*(GAME|DMIT))(?=.*(3X)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 CTC GAME`url-test`^(?=.*(TW))(?=.*(UC)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 CTC GAME`url-test`^(?=.*(JP))(?=.*(CIPLC|UCLOUD)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|TW|SG|JP))((?=.*0\.[1-9]))(?=.*(CM|CU)).*$`http://www.gstatic.com/generate_204`300,,50
 
