--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -76,8 +76,8 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🌐 Google`select`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💡 OpenAi`select`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
 custom_proxy_group=💡 AI工具`select`[]🇸🇬 狮城低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
@@ -119,19 +119,19 @@ custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP
 
 # HK
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(AHC|DMIT|Misaka|ALI))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))((?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT|UC))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))((?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))((?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO))((?!.*0\.[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
 custom_proxy_group=🇺🇲 守候高级`url-test`^(?=.*(US))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
