--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -119,15 +119,15 @@ custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(KR))(?=.*(IEPL|IPLC|EIP
 
 # HK
 custom_proxy_group=🇭🇰 守候高级`url-test`^(?=.*(HK))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))(?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 CTC`url-test`^(?=.*(HK))(?=.*(DMIT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # TW
 custom_proxy_group=🇹🇼 守候高级`url-test`^(?=.*(TW))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 CTC`url-test`^(?=.*(TW))(?=.*(FxT))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # SG
 custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1X)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
 custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
