--- a/XTT@CTC.ini
+++ b/XTT@CTC.ini
@@ -130,7 +130,7 @@ custom_proxy_group=🇸🇬 守候高级`url-test`^(?=.*(SG))(?=.*(IEPL|IPLC|EIP
 custom_proxy_group=🇸🇬 CTC`url-test`^(?=.*(SG))(?=.*(Oracle))(?=.*(1x)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # JP
-custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 守候高级`url-test`^(?=.*(JP))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链|专线))(?!.*(CIPLC)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 CTC`url-test`^(?=.*(JP))(?=.*(OWO)).*$`http://www.gstatic.com/generate_204`300,,50
 
 # US
